[project]
name = ""
version = ""
description = ""
authors = [{ name = "Taras Nytiaha", email = "taras.nytiaha@gmail.com" }]
dependencies = [
    "flask>=3.0.0",
    "Flask-SQLAlchemy>=3.1.1",
    "flask-bcrypt>=1.0.1",
    "Flask-Migrate>=4.0.5",
    "pytest>=7.4.2",
    "flask-shell-ipython>=0.5.1",
    "bleak>=0.20.2",
    "black>=23.9.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
